<?xml version="1.0"?>
<package format="2">
  <name>staubli</name>
  <version>0.1.0</version>
  <description>ROS-Industrial support for Staubli manipulators (metapackage).</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://ros.org/wiki/staubli</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>staubli_resources</exec_depend>
  <exec_depend>staubli_rx160_moveit_config</exec_depend>
  <exec_depend>staubli_rx160_moveit_plugins</exec_depend>
  <exec_depend>staubli_rx160_support</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
