<package>
  <name>staubli_rx160_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS Industrial support for the Staubli RX160 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Staubli RX160 manipulators. This currently includes the base model
      only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>RX160 - Standard Arm - Nominal Speed</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>Staubli Robotics - RX series 160 family - Instruction Manual</em>
      version <em>D28086504A – 19/06/2012</em>. All urdfs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p><b>Contributors</b>:</p>
    <p>
      This support package has received contributions from: S. van Elderen
      (RX160).
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://ros.org/wiki/staubli_rx160_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>staubli_resources</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
