<package>
  <name>staubli_rx170_support</name>
  <version>1.0.0</version>
  <description>The staubli_rx170_support package includes common configurations and 3D models for staubli manipulators</description>
  <maintainer email="josiahwtaylor@gmail.com">Josiah Taylor</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_core</url>
  <author email="josiahwtaylor@gmail.com">Josiah Taylor</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>
